--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
+        "@mdi/font": "^7.0.96",
         "@vitejs/plugin-vue": "^3.2.0",
         "vue": "^3.2.41",
         "vuetify": "^3.0.0"
